--- a/templates/userside/checkout.html
+++ b/templates/userside/checkout.html
@@ -671,9 +671,8 @@
                                             <div class="card">
                                                 <div class="card-header" id="heading-3">
                                                     <h2 class="card-title">
-                                                        <input type="radio" class="collapsed" role="button" data-toggle="collapse" href="#collapse-3" aria-expanded="false" aria-controls="collapse-3">
-                                                          Cash on Delivery
-                                                    </input>
+                                                        <input checked type="radio" name="payment_method" value="cash_on_delivery" id="payment-cash-on-delivery">
+                                                        <label for="payment-cash-on-delivery">Cash on Delivery</label>
                                                     </h2>
                                                 </div>
                                                 <div id="collapse-3" class="collapse" aria-labelledby="heading-3" data-parent="#accordion-payment">
@@ -684,6 +683,7 @@
                                             <div class="card">
                                                 <div id="collapse-4" class="collapse" aria-labelledby="heading-4" data-parent="#accordion-payment">
                                                     <div class="card-body">
+
                                                         Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede. Donec nec justo eget felis facilisis fermentum.
                                                     </div>
                                                 </div>
@@ -701,7 +701,7 @@
                                             </button>
                                     </div>
                                 </aside>
-                            </div>
+                          ++  </div>
                         </form>
                         
 	                </div><!-- End .container -->
