--- a/templates/customadmin/category.html
+++ b/templates/customadmin/category.html
@@ -7,32 +7,63 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <!--EDIT MODAL-->
+    <div class="modal fade" id="editCategoryModal" tabindex="-1" role="dialog" aria-labelledby="editCategoryModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editCategoryModalLabel">Edit Category</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form id="editCategoryForm" method="post" action="{% url 'category:edit_savecategory' %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="category_id" id="editCategoryId">
+                        <div class="form-group">
+                            <label for="editCategoryName">Category Name</label>
+                            <input type="text" class="form-control" id="editCategoryName" name="category_name">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Save Changes</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--END-->
+
+
+
     <div class="container mt-5">
         <h1 class="mb-4">Category List</h1>
         <table class="table table-striped table-hover">
             <thead class="thead-dark">
                 <tr>
-                    <th>ID</th>
+                    
                     <th>Category Name</th>
                     <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
-                {% for i in cat %}
+                {% for i in category %}
                 <tr>
-                    <td>{{ i.id }}</td>
+                    {% comment %} {% if i.id == 12%} {% endcomment %}
                     <td>{{ i.category_name }}</td>
                     <td>
-                        <a href="{% url 'category:edit_category' i.id %}" class="btn btn-primary btn-sm">Edit</a>
+                        <a href="#" class="btn btn-primary btn-sm edit-category-btn" data-toggle="modal" data-target="#editCategoryModal" onClick="editCategory({{i.id}})">Edit</a>
                         <form method="post" action="{% url 'category:delete_category' i.id %}" class="d-inline">
                             {% csrf_token %}
                             <button type="submit" class="btn btn-danger btn-sm">Delete</button>
-                        </form>
+                        </form> 
                     </td>
+                    {% comment %} {%endif%} {% endcomment %}
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
+			<a href="{% url 'adminside:dashboard' %}" class="btn btn-danger"><i class="material-icons"></i> <span >back to admin home</span></a>	
+        
     </div>
     
     <!-- Add Category Button -->
@@ -44,6 +75,26 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+        var categories = {{ category|safe }};
+        function editCategory(category_id){
+            console.log(category_id)
+           for(let i=0;i < categories.length;i++){
+                if (category_id==categories[i].id){
+                    console.log(categories[i])
+                    $('#editCategoryId').val(categories[i].id);
+                    $('#editCategoryName').val(categories[i].category_name);
+
+                    $('#editCategoryModal').Modal('show');
+                    break;
+
+            
+            }
+                
+            }
+                
+        }
+    </script>
 </body>
 </html>
 
