--- a/templates/customadmin/products.html
+++ b/templates/customadmin/products.html
@@ -281,36 +281,15 @@
 
 
 	 <!-- user   table  -->
-    <div class="container">
-        <div class="table-wrapper">
-            <div class="table-title">
-                <div class="row">
-                    <div class="col-sm-6">
-						<h2>Manage  products</h2>
-					</div>
-					  <div class="col-6">
-				          <form method="POST" action="{% url 'products:search_for_product' %}"class="form-inline col-6 my-2 my-lg-0">
-							{% csrf_token %}
-							<input class="form-control mr-sm-2" type="search" placeholder="Search" name='query'>
-							<button class="butto1" type="submit">Search</button>
-						  </form>
-						</div>
-					</div>
-				    
-					{% if products %}
-    <h3>Search Results for "{{ query }}"</h3>
-    <ul>
-        {% for product in products %}
-            <li>{{ product.name }}</li>
-            <!-- Display other product details as needed -->
-        {% endfor %}
-    </ul>
-{% else %}
-    <p>No products found for "{{ query }}".</p>
-{% endif %}
+    
 
-                </div>
+
+
+
             </div>
+
+
+
             <table class="table table-striped table-hover">
                 <thead>
 					
@@ -381,7 +360,7 @@
 					{% endfor %}		
                 </tbody>
             </table>
-			<a href="/adminhome/" class="btn btn-danger"><i class="material-icons"></i> <span>back to admin home</span></a>	
+			<a href="{% url 'adminside:dashboard' %}" class="btn btn-danger"><i class="material-icons"></i> <span>back to admin home</span></a>	
 			<a href="{% url 'products:addproduct' %}" class="btn btn-success"><i class="material-icons"></i> <span>Add product</span></a>	
 			
         </div>
